Added more date formats for conversion. Also merged some general code improvements we were conducting in parallel.