@@ -30,13 +30,13 @@ import static org.junit.jupiter.api.Assertions.*;
 /**
  * Tests primarily the various cloning scenarios available with PropertiesUtils
  */
-@SuppressWarnings({"nls","unchecked"})
+@SuppressWarnings({"nls", "unchecked"})
 public class TestPropertiesUtils {
 
-    private final static String TEMP_FILE = UnitTestUtil.getTestScratchPath() + "/temp.properties"; 
+    private final static String TEMP_FILE = UnitTestUtil.getTestScratchPath() + "/temp.properties";
 
     @AfterEach
-    public void tearDown() throws Exception {
+    public void tearDown() {
         try {
             File temp = new File(TEMP_FILE);
             temp.delete();
@@ -53,7 +53,8 @@ public class TestPropertiesUtils {
 
     // ################ putAll(Properties, Properties) ###########################
 
-    @Test public void testPutAllWithDefaults(){
+    @Test
+    public void testPutAllWithDefaults() {
         Properties c = make(MAP_C, null, !UNMODIFIABLE);
         Properties ab = make(MAP_A, make(MAP_B, null, UNMODIFIABLE), UNMODIFIABLE);
         PropertiesUtils.putAll(c, ab);
@@ -62,19 +63,22 @@ public class TestPropertiesUtils {
 
     // ##################### clone(Properties) ###################################
 
-    @Test public void testSimpleModifiableClone(){
+    @Test
+    public void testSimpleModifiableClone() {
         Properties a = make(MAP_A, null, !UNMODIFIABLE);
         a = PropertiesUtils.clone(a);
         assertTrue(verifyProps(a, LIST_A));
     }
 
-    @Test public void testSimpleModifiableCloneWithUnmodifiableDefaults(){
+    @Test
+    public void testSimpleModifiableCloneWithUnmodifiableDefaults() {
         Properties ab = make(MAP_A, make(MAP_B, null, UNMODIFIABLE), !UNMODIFIABLE);
         ab = PropertiesUtils.clone(ab);
         assertTrue(verifyProps(ab, LIST_AB));
     }
 
-    @Test public void testSimpleModifiableCloneWithModifiableDefaults(){
+    @Test
+    public void testSimpleModifiableCloneWithModifiableDefaults() {
         Properties ab = make(MAP_A, make(MAP_B, null, !UNMODIFIABLE), !UNMODIFIABLE);
         ab = PropertiesUtils.clone(ab);
         assertTrue(verifyProps(ab, LIST_AB));
@@ -82,19 +86,22 @@ public class TestPropertiesUtils {
 
     // ##################### clone(Properties, boolean) ##########################
 
-    @Test public void testCloneModifiableAsModifiable(){
+    @Test
+    public void testCloneModifiableAsModifiable() {
         Properties a = make(MAP_A, null, !UNMODIFIABLE);
         a = PropertiesUtils.clone(a);
         assertTrue(verifyProps(a, LIST_A));
     }
 
-    @Test public void testCloneUnmodifiableAsModifiable(){
+    @Test
+    public void testCloneUnmodifiableAsModifiable() {
         Properties a = make(MAP_A, null, UNMODIFIABLE);
         a = PropertiesUtils.clone(a);
         assertTrue(verifyProps(a, LIST_A));
     }
 
-    @Test public void testCloneModifiableWithModifiableAsModifiable(){
+    @Test
+    public void testCloneModifiableWithModifiableAsModifiable() {
         Properties ab = make(MAP_A, make(MAP_B, null, !UNMODIFIABLE), !UNMODIFIABLE);
         ab = PropertiesUtils.clone(ab);
         assertTrue(verifyProps(ab, LIST_AB));
@@ -102,56 +109,64 @@ public class TestPropertiesUtils {
 
     // ######## clone(Properties, Properties, boolean, boolean) ##################
 
-    @Test public void testCloneModAndModAsMod(){
+    @Test
+    public void testCloneModAndModAsMod() {
         Properties a = make(MAP_A, null, !UNMODIFIABLE);
         Properties b = make(MAP_B, null, !UNMODIFIABLE);
         a = PropertiesUtils.clone(a, b, !DEEP_CLONE);
         assertTrue(verifyProps(a, LIST_AB));
     }
 
-    @Test public void testDeepcloneModAndModAsMod(){
+    @Test
+    public void testDeepcloneModAndModAsMod() {
         Properties a = make(MAP_A, null, !UNMODIFIABLE);
         Properties b = make(MAP_B, null, !UNMODIFIABLE);
         a = PropertiesUtils.clone(a, b, DEEP_CLONE);
         assertTrue(verifyProps(a, LIST_AB));
     }
 
-    @Test public void testCloneModAndUnmodAsMod(){
+    @Test
+    public void testCloneModAndUnmodAsMod() {
         Properties a = make(MAP_A, null, !UNMODIFIABLE);
         Properties b = make(MAP_B, null, UNMODIFIABLE);
         a = PropertiesUtils.clone(a, b, !DEEP_CLONE);
         assertTrue(verifyProps(a, LIST_AB));
     }
 
-    @Test public void testDeepcloneModAndUnmodAsMod(){
+    @Test
+    public void testDeepcloneModAndUnmodAsMod() {
         Properties a = make(MAP_A, null, !UNMODIFIABLE);
         Properties b = make(MAP_B, null, UNMODIFIABLE);
         a = PropertiesUtils.clone(a, b, DEEP_CLONE);
         assertTrue(verifyProps(a, LIST_AB));
     }
 
-    @Test public void testCloneUnmodAndModAsMod(){
+    @Test
+    public void testCloneUnmodAndModAsMod() {
         Properties a = make(MAP_A, null, UNMODIFIABLE);
         Properties b = make(MAP_B, null, !UNMODIFIABLE);
         a = PropertiesUtils.clone(a, b, !DEEP_CLONE);
         assertTrue(verifyProps(a, LIST_AB));
     }
 
-    @Test public void testDeepcloneUnmodAndModAsMod(){
+    @Test
+    public void testDeepcloneUnmodAndModAsMod() {
         Properties a = make(MAP_A, null, UNMODIFIABLE);
         Properties b = make(MAP_B, null, !UNMODIFIABLE);
         a = PropertiesUtils.clone(a, b, DEEP_CLONE);
         assertTrue(verifyProps(a, LIST_AB));
     }
 
-    @Test public void testCloneUnmodAndUnmodAsMod(){
+    @Test
+    public void testCloneUnmodAndUnmodAsMod() {
         Properties a = make(MAP_A, null, UNMODIFIABLE);
         Properties b = make(MAP_B, null, UNMODIFIABLE);
         a = PropertiesUtils.clone(a, b, !DEEP_CLONE);
         assertTrue(verifyProps(a, LIST_AB));
     }
 
-    @Test public void testDeepcloneUnmodAndUnmodAsMod(){
+    @Test
+    public void testDeepcloneUnmodAndUnmodAsMod() {
         Properties a = make(MAP_A, null, UNMODIFIABLE);
         Properties b = make(MAP_B, null, UNMODIFIABLE);
         a = PropertiesUtils.clone(a, b, DEEP_CLONE);
@@ -166,15 +181,16 @@ public class TestPropertiesUtils {
 
     /**
      * Checks the Properties against the static test data defined in this Class.
-     * @param props Properties to check
+     *
+     * @param props           Properties to check
      * @param chainOfMappings a List of Map objects in order of defaults.  That is,
-     * the first Map should represent the properties itself, the second Map the internal
-     * defaults of the properties, the third Map the defaults of the second Map, and so on...
+     *                        the first Map should represent the properties itself, the second Map the internal
+     *                        defaults of the properties, the third Map the defaults of the second Map, and so on...
      * @return true or false for pass or fail
      */
-    private static final boolean verifyProps(Properties props, List chainOfMappings){
+    private static boolean verifyProps(Properties props, List chainOfMappings) {
         boolean result = verifyAllPropsPresent(props, chainOfMappings);
-        if (result){
+        if (result) {
             result = verifyCorrectMappings(props, chainOfMappings);
         }
         return result;
@@ -182,23 +198,23 @@ public class TestPropertiesUtils {
 
     /**
      * Check that the Set of all keys in the List<Map> chainOfMappings is present in props.
-     * @param props Properties to check
+     *
+     * @param props           Properties to check
      * @param chainOfMappings a List of Map objects in order of defaults.  That is,
-     * the first Map should represent the properties itself, the second Map the internal
-     * defaults of the properties, the third Map the defaults of the second Map, and so on...
+     *                        the first Map should represent the properties itself, the second Map the internal
+     *                        defaults of the properties, the third Map the defaults of the second Map, and so on...
      * @return true all keys are present, false otherwise
      */
-    private static final boolean verifyAllPropsPresent(Properties props, List chainOfMappings){
+    private static boolean verifyAllPropsPresent(Properties props, List chainOfMappings) {
         Enumeration e = props.propertyNames();
         HashSet propNames = new HashSet();
         while (e.hasMoreElements()) {
-            propNames.add( e.nextElement());
+            propNames.add(e.nextElement());
         }
 
         HashSet testNames = new HashSet();
-        Iterator i = chainOfMappings.iterator();
-        while (i.hasNext()) {
-            Map aMapping = (Map) i.next();
+        for (Object chainOfMapping : chainOfMappings) {
+            Map aMapping = (Map) chainOfMapping;
             testNames.addAll(aMapping.keySet());
         }
         return propNames.containsAll(testNames);
@@ -213,13 +229,14 @@ public class TestPropertiesUtils {
      * false: (1) if a property name maps to an incorrect, non-null value the first
      * time a mapping for that property name is found; (2) if no mapping is found at
      * for a property name.
-     * @param props Properties to check
+     *
+     * @param props           Properties to check
      * @param chainOfMappings a List of Map objects in order of defaults.  That is,
-     * the first Map should represent the properties itself, the second Map the internal
-     * defaults of the properties, the third Map the defaults of the second Map, and so on...
+     *                        the first Map should represent the properties itself, the second Map the internal
+     *                        defaults of the properties, the third Map the defaults of the second Map, and so on...
      * @return true if props correctly reflects the chainOfMappings, false otherwise
      */
-    private static final boolean verifyCorrectMappings(Properties props, List chainOfMappings){
+    private static boolean verifyCorrectMappings(Properties props, List chainOfMappings) {
         Enumeration e = props.propertyNames();
         boolean allGood = true;
         while (e.hasMoreElements() && allGood) {
@@ -230,7 +247,7 @@ public class TestPropertiesUtils {
             while (i.hasNext() && !foundKey) {
                 Map aMapping = (Map) i.next();
                 Object value = aMapping.get(propName);
-                if (value != null){
+                if (value != null) {
                     foundKey = true;
                     allGood = propValue.equals(value);
                 }
@@ -243,22 +260,22 @@ public class TestPropertiesUtils {
      * Constructs a Properties object from the supplied Map of properties,
      * the supplied defaults, and optionally wraps the returned Properties
      * in an UnmodifiableProperties instance
-     * @param mappings Map of String propName to String propValue
-     * @param defaults optional default Properties; may be null
+     *
+     * @param mappings         Map of String propName to String propValue
+     * @param defaults         optional default Properties; may be null
      * @param makeUnmodifiable If true, the returned Properties object will be
-     * an instance of UnmodifiableProperties wrapping a Properties object
+     *                         an instance of UnmodifiableProperties wrapping a Properties object
      */
-    private static final Properties make(Map mappings, Properties defaults, boolean makeUnmodifiable){
-        Properties props = null;
-        if (defaults != null){
+    private static Properties make(Map mappings, Properties defaults, boolean makeUnmodifiable) {
+        Properties props;
+        if (defaults != null) {
             props = new Properties(defaults);
         } else {
             props = new Properties();
         }
-        Iterator i = mappings.entrySet().iterator();
-        while (i.hasNext()) {
-            Map.Entry anEntry = (Map.Entry) i.next();
-            props.setProperty((String)anEntry.getKey(),(String)anEntry.getValue());
+        for (Object o : mappings.entrySet()) {
+            Map.Entry anEntry = (Map.Entry) o;
+            props.setProperty((String) anEntry.getKey(), (String) anEntry.getValue());
         }
         return props;
     }
@@ -289,47 +306,45 @@ public class TestPropertiesUtils {
     private static final Map<String, String> MAP_B;
     private static final Map<String, String> MAP_C;
     private static final List<Map<String, String>> LIST_A;
-//    private static final List LIST_B;
+    //    private static final List LIST_B;
     private static final List LIST_AB;
     private static final List LIST_ABC;
-    static{
+
+    static {
         //A
-        Map<String, String> temp = new HashMap<String, String>();
-        temp.put(PROP_NAME_1, PROP_VALUE_1A);
-        temp.put(PROP_NAME_2, PROP_VALUE_2A);
-        temp.put(PROP_NAME_3, PROP_VALUE_3A);
-        MAP_A = Collections.unmodifiableMap(temp);
+        Map<String, String> temp;
+        MAP_A = Map.of(PROP_NAME_1, PROP_VALUE_1A, PROP_NAME_2, PROP_VALUE_2A, PROP_NAME_3, PROP_VALUE_3A);
         //B
-        temp = new HashMap<String, String>();
+        temp = new HashMap<>();
         temp.put(PROP_NAME_1, PROP_VALUE_1B);
         temp.put(PROP_NAME_4, PROP_VALUE_4B);
         temp.put(PROP_NAME_5, PROP_VALUE_5B);
         MAP_B = Collections.unmodifiableMap(temp);
         //C
-        temp = new HashMap<String, String>();
+        temp = new HashMap<>();
         temp.put(PROP_NAME_2, PROP_VALUE_2C);
         temp.put(PROP_NAME_4, PROP_VALUE_4C);
         temp.put(PROP_NAME_6, PROP_VALUE_6C);
         MAP_C = Collections.unmodifiableMap(temp);
         //LISTS OF BINDINGS
-        List<Map<String, String>> tempList = new ArrayList<Map<String, String>>(1);
-        tempList.add(MAP_A);
-        LIST_A = Collections.unmodifiableList(tempList);
-        tempList = new ArrayList<Map<String, String>>(1);
+        List<Map<String, String>> tempList;
+        LIST_A = List.of(MAP_A);
+        tempList = new ArrayList<>(1);
         tempList.add(MAP_B);
 //        LIST_B = Collections.unmodifiableList(tempList);
-        tempList = new ArrayList<Map<String, String>>(2);
+        tempList = new ArrayList<>(2);
         tempList.add(MAP_A);
         tempList.add(MAP_B);
         LIST_AB = Collections.unmodifiableList(tempList);
-        tempList = new ArrayList<Map<String, String>>(3);
+        tempList = new ArrayList<>(3);
         tempList.add(MAP_A);
         tempList.add(MAP_B);
         tempList.add(MAP_C);
         LIST_ABC = Collections.unmodifiableList(tempList);
     }
 
-    @Test public void testGetInvalidInt() {
+    @Test
+    public void testGetInvalidInt() {
         Properties p = new Properties();
         p.setProperty("x", "y");
         try {
@@ -349,30 +364,38 @@ public class TestPropertiesUtils {
         public int getProp() {
             return prop;
         }
+
         public void setProp(int prop) {
             this.prop = prop;
         }
+
         public String getProp1() {
             return prop1;
         }
+
         public void setProp1(String prop1) {
             this.prop1 = prop1;
         }
+
         public double getProp2() {
             return prop2;
         }
+
         public void setProp2(double prop2) {
             this.prop2 = prop2;
         }
+
         public List<String> getProp3() {
             return prop3;
         }
+
         public void setProp3(List<String> prop3) {
             this.prop3 = prop3;
         }
     }
 
-    @Test public void testSetBeanProperties() {
+    @Test
+    public void testSetBeanProperties() {
         Bean bean = new Bean();
         Properties p = new Properties();
         p.setProperty("prop", "0");
@@ -396,11 +419,12 @@ public class TestPropertiesUtils {
             PropertiesUtils.setBeanProperties(bean, p, null);
             fail("expected exception");
         } catch (PropertiesUtils.InvalidPropertyException e) {
-
+            // Ignored
         }
     }
 
-    @Test public void testGetInt() {
+    @Test
+    public void testGetInt() {
         Properties p = new Properties();
         p.setProperty("prop", "0  ");
         assertEquals(PropertiesUtils.getIntProperty(p, "prop", -1), 0);
@@ -418,7 +442,8 @@ public class TestPropertiesUtils {
         }
     }
 
-    @Test public void testCaseSensitive() {
+    @Test
+    public void testCaseSensitive() {
         Properties p = new Properties();
         p.setProperty("org.teiid.val", "100");
         MyBean test = new MyBean();
@@ -426,7 +451,8 @@ public class TestPropertiesUtils {
         assertEquals(100, test.getVal());
     }
 
-    @Test public void testSystemProperty() {
+    @Test
+    public void testSystemProperty() {
         String old = System.setProperty("org.teiid.val", "200");
         try {
             MyBean test = new MyBean();
@@ -441,7 +467,8 @@ public class TestPropertiesUtils {
         }
     }
 
-    @Test public void testGetEnvValue() {
+    @Test
+    public void testGetEnvValue() {
         Map<String, String> env = new HashMap<>();
         env.put("ORG_TEIID_SOME_LONG_VAL", "val");
         assertEquals("val", PropertiesUtils.getValue("org.teiid.someLongVal", Collections.EMPTY_MAP, env));
